# ChangeLog for www-apps/mediawiki
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.128 2010/03/05 12:28:45 fauli Exp $

  05 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  mediawiki-1.15.1.ebuild:
  stable x86, security bug 300220

  05 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  mediawiki-1.14.1.ebuild:
  stable x86, security bug 300220

  26 Dec 2009; Peter Volkov <pva@gentoo.org> mediawiki-1.11.2.ebuild,
  mediawiki-1.12.3.ebuild, mediawiki-1.13.3.ebuild, mediawiki-1.13.5.ebuild,
  mediawiki-1.14.0.ebuild, mediawiki-1.14.1.ebuild, mediawiki-1.15.1.ebuild:
  virtual/ghostscript->app-text/ghostscript-gpl: ghostscript-gpl is the only
  implementation left in the tree.

*mediawiki-1.15.1 (17 Oct 2009)

  17 Oct 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  +mediawiki-1.15.1.ebuild:
  Non-maintainer commit: Version bump, #275447

  09 Aug 2009; nixnut <nixnut@gentoo.org> mediawiki-1.14.1.ebuild:
  ppc stable #279189

*mediawiki-1.14.1 (01 Aug 2009)

  01 Aug 2009; Alex Legler <a3li@gentoo.org> +mediawiki-1.14.1.ebuild:
  Non-maintainer commit: Version bump for security bug 279189.

  09 May 2009; Raúl Porcel <armin76@gentoo.org> mediawiki-1.13.5.ebuild:
  sparc stable wrt #261128

  27 Apr 2009; Brent Baude <ranger@gentoo.org> mediawiki-1.14.0.ebuild:
  Marking mediawiki-1.14.0 ppc for bug 261128

  23 Apr 2009; Markus Meier <maekke@gentoo.org> mediawiki-1.13.5:
  amd64/x86 stable, bug #261128

  22 Apr 2009; Peter Volkov <pva@gentoo.org> mediawiki-1.14.0:
  Added spl for php requirements, thank Tobias Scherbaum for report in bug
  #261128.

*mediawiki-1.14.0 (07 Apr 2009)
*mediawiki-1.13.5 (07 Apr 2009)

  07 Apr 2009; Peter Volkov <pva@gentoo.org> +mediawiki-1.13.5.ebuild,
  +mediawiki-1.14.0.ebuild:
  Version bump, bug #261126 and bug #261128, thank Patrick for both reports.

  01 Jan 2009; Tobias Heinlein <keytoaster@gentoo.org>
  mediawiki-1.13.3.ebuild: