@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/mediawiki
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.128 2010/03/05 12:28:45 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.129 2010/03/07 14:43:46 maekke Exp $
+
+  07 Mar 2010; Markus Meier <maekke@gentoo.org> mediawiki-1.14.1.ebuild,
+  mediawiki-1.15.1.ebuild:
+  amd64 stable, bug #300220
 
   05 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
   mediawiki-1.15.1.ebuild:
